# MS500_ESP32_P4

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.ci.esp32p4_h264  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.old
components/esp_cam_sensor/sensors/imx500/: imx500.c
components/esp_cam_sensor/sensors/imx500/cfg/: imx500_default.json
components/esp_cam_sensor/sensors/imx500/private_include/: imx500_settings.h
components/esp_cam_sensor/sensors/ov5647/: ov5647.c
components/sensor_init/: idf_component.yml
components/usb_device_uvc/: idf_component.yml  usb_device_uvc.c
main/: CMakeLists.txt  Kconfig.projbuild  camera_dsi_main.c  idf_component.yml  imx501.c  imx501.h  imx501_lpr_main.c  main.c  usb_cam.h  usb_cam1.c  usb_uvc_device.c
main/ai_drivers/: ai_gpio.c  ai_gpio.h  ai_i2c.c  ai_i2c.h  ai_spi_dev.c  ai_spi_dev.h  bsp_spiff.c  fw_dnn.c  fw_dnn.h  fw_loader.c  fw_loader.h  fw_reg_db.cpp  fw_reg_db.h
main/ai_process/: ai_inference.cpp  ai_inference.h  ai_nms.hpp  ai_spi_receive.c  ai_utils.cpp  ai_utils.h  output_tensor_parser.cpp  output_tensor_parser.h
main/bsp/: ai_gpio.c  ai_gpio.h  bsp_config.c  bsp_config.h  bsp_rtc.h  bsp_sd_card.c  bsp_sd_card.h  bsp_sleep.c  bsp_sleep.h  bsp_spiff.c  bsp_spiff.h  bsp_storage.c  bsp_storage.h  bsp_uvc.c  bsp_uvc.h  bsp_uvc_cam.c  bsp_uvc_cam.h  bsp_uvc_jpg.c  bsp_uvc_jpg.h  bsp_video.c  bsp_video.h  bsp_video_jpg.c  bsp_video_jpg.h
spiffs_data/dnn/: network_info.txt  ppl_config.json
spiffs_data/firmware/: firmware.fpk
spiffs_data/reg_db/: reg_bin_bayer.txt  reg_com.txt  reg_es2.txt  reg_type2_es2.txt  reg_v2h2.txt
